# SonarTrackerPro

./: .gitignore  .gitignore.save  CMakeLists.txt
doc/: 关于软件界面参数的解释.md
src/: main.cpp
src/core/: CBFProcessor.cpp  CBFProcessor.h  DataTypes.h  Deconvolution.cpp  Deconvolution.h  DspWorker.cpp  DspWorker.h  RawReader.cpp  RawReader.h  TrackManager.cpp  TrackManager.h  detect_line_spectrum_from_lofar_change.cpp  detect_line_spectrum_from_lofar_change.h  fir2.cpp  fir2.h
src/ui/: MainWindow.cpp  MainWindow.h
